<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trolley"
            android:checked="true"
            android:title="@string/trolley_name" />
        <item
            android:id="@+id/nav_tram"
            android:title="@string/tram_name" />
        <item
            android:id="@+id/nav_route"
            android:title="@string/route_name" />
        <item
            android:id="@+id/nav_bus"
            android:title="@string/bus_name" />
        <item
            android:id="@+id/nav_sub"
            android:title="@string/suburban_name" />
        <item
            android:id="@+id/nav_inter"
            android:title="@string/inter_name" />
        <item
            android:id="@+id/nav_train"
            android:title="@string/train_name" />
    </group>
</menu>